# pygtsam

./: CMakeLists.txt  LICENSE  README.md
examples/: batch_fixed_lag_smoother.py  isam_fixed_lag_smoother.py  isam_fixed_lag_smoother_recycle_factors.py  pygtsam_fixed_lag_smoother.py  test_isam_fixed_lag_smoother.py
factor_removal_fix/: ISAM2.cpp  ISAM2.h
include/pygtsam/: pybot_eigen_types.hpp
include/pygtsam/utils/: eigen_numpy_conversion.hpp  ublas_conversion.cpp
src/: eigen_numpy_conversion.cpp  pybot_eigen_types.cpp  pygtsam.cpp
